boa prática:separar aquivos js por responsabilidades

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
 		</main>
 
-		<script lang="javascript" src="js/principal.js"></script>
+		<script lang="javascript" src="js/calculaImc.js"></script>
+		<script lang="javascript" src="js/form.js"></script>
 	</body>
 </html>
