--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
 
 		<script lang="javascript" src="js/calculaImc.js"></script>
 		<script lang="javascript" src="js/form.js"></script>
+		<script lang="javascript" src="js/remover-paciente.js"></script>
 	</body>
 </html>
