filtrando pacientes com busca

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtro:</label>
+				<input type="text" name="filtro" id="filtrar-tabela"
+					placeholder="Digite o paciente"/>
+
 				<table>
 					<thead>
 						<tr>
@@ -103,5 +107,6 @@
 		<script lang="javascript" src="js/calculaImc.js"></script>
 		<script lang="javascript" src="js/form.js"></script>
 		<script lang="javascript" src="js/remover-paciente.js"></script>
+		<script lang="javascript" src="js/filter.js"></script>
 	</body>
 </html>
