ajax / requisição externa

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar pacientes</button>
 			</section>
-
+			
+			
 			<!-- ... -->
 			<section class="container">
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
@@ -108,5 +109,6 @@
 		<script lang="javascript" src="js/form.js"></script>
 		<script lang="javascript" src="js/remover-paciente.js"></script>
 		<script lang="javascript" src="js/filter.js"></script>
+		<script lang="javascript" src="js/buscar-pacientes.js"></script>
 	</body>
 </html>
